--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongojs": "^2.6.0",
-
+    "express-handlebars": "^3.0.0",
+    "mongodb": "^3.1.10",
+    "mongojs": "^2.6.0"
   }
 }
