--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.1.10",
-    "mongojs": "^2.6.0"
+    "mongojs": "^2.6.0",
+    "nodemon": "^1.18.8"
   }
 }
