--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "moment": "^2.23.0",
     "mongodb": "^3.1.10",
     "mongojs": "^2.6.0",
     "nodemon": "^1.18.8"
